--- a/blocks/photo-grid/__description/photo-grid__description.css
+++ b/blocks/photo-grid/__description/photo-grid__description.css
@@ -4,4 +4,7 @@
   font-weight: 900;
   font-size: 1.5rem;
   line-height: 29px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
