--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,8 +1,16 @@
 .popup__container {
   display: flex;
+  box-sizing: border-box;
   flex-direction: column;
   width: 430px;
   background-color: white;
   padding: 34px 36px 37px;
   border-radius: 10px;
+}
+
+@media screen and (max-width: 1279px) {
+  .popup__container {
+    width: 100%;
+    padding: 25px 22px;
+  }
 }
