--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,11 +1,11 @@
-.input {
+.popup__input {
   font-family: 'Inter', serif;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  padding-bottom: 13px;
+  padding-bottom: 0;
   margin-bottom: 48px;
 }
 
-.input:first-of-type {
+.popup__input:first-of-type {
   margin-bottom: 30px;
 }
