--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -2,7 +2,7 @@
   display: flex;
   box-sizing: border-box;
   flex-direction: column;
-  width: 430px;
+  width: 91.48%;
   background-color: white;
   padding: 34px 36px 37px;
   border-radius: 10px;
