--- a/blocks/profile/__image/profile__image.css
+++ b/blocks/profile/__image/profile__image.css
@@ -6,7 +6,7 @@
 
 @media screen and (max-width: 1279px) {
   .profile__image {
-    margin: 0;
+    margin-right: 0;
     margin-bottom: 26px;
   }
 }
