--- a/blocks/profile/__personal-data/profile__personal-data.css
+++ b/blocks/profile/__personal-data/profile__personal-data.css
@@ -1,13 +1,13 @@
-.profile__info {
+.profile__personal-data {
   display: flex;
   flex-direction: column;
   color: white;
-  margin-right: 244px;
+  padding-right: 244px;
 }
 
 @media screen and (max-width: 1279px) {
-  .profile__info {
-    margin: 0;
+  .profile__personal-data {
+    padding: 0;
     width: 100%;
     max-width: 320px;
   }
