--- a/blocks/photo-grid/__description/photo-grid__description.css
+++ b/blocks/photo-grid/__description/photo-grid__description.css
@@ -1,6 +1,6 @@
 .photo-grid__description {
   margin: 0;
-  font-family: 'Inter', serif;
+  font-family: 'Inter', 'Arial', sans-serif;
   font-weight: 900;
   font-size: 1.5rem;
   line-height: 29px;
