--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,8 +1,10 @@
 .popup__container {
   display: flex;
   box-sizing: border-box;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   flex-direction: column;
-  width: 91.48%;
+  width: 430px;
+  max-height: 330px;
   background-color: white;
   padding: 34px 36px 37px;
   border-radius: 10px;
@@ -10,7 +12,7 @@
 
 @media screen and (max-width: 1279px) {
   .popup__container {
-    width: 100%;
+    width: 282px;
     padding: 25px 22px;
   }
 }
