--- a/blocks/popup/__heading/popup__heading.css
+++ b/blocks/popup/__heading/popup__heading.css
@@ -1,10 +1,10 @@
 .popup__heading {
-  font-family: 'Inter', serif;
+  font-family: 'Inter', 'Arial', sans-serif;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
   margin: 0;
-  padding-bottom: 54px;
+  padding-bottom: 49px;
 }
 
 @media screen and (max-width: 1279px) {
