--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,8 +1,12 @@
 .popup__input {
-  font-family: 'Inter', serif;
+  width: 100%;
+  font-family: 'Inter', 'Arial', sans-serif;
+  font-size: 14px;
+  line-height: 17px;
+  box-sizing: border-box;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  padding-bottom: 0;
+  padding-bottom: 10px;
   margin-bottom: 48px;
 }
 
