--- a/blocks/profile/__personal-data/profile__personal-data.css
+++ b/blocks/profile/__personal-data/profile__personal-data.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   color: white;
-  padding-right: 244px;
+  margin: 0 auto 0 0;
 }
 
 @media screen and (max-width: 1279px) {
