--- a/blocks/profile/__username/profile__username.css
+++ b/blocks/profile/__username/profile__username.css
@@ -2,7 +2,7 @@
   font-weight: 500;
   font-size: 2.625rem;
   line-height: 1.14;
-  font-family: 'Inter', serif;
+  font-family: 'Inter', 'Arial', sans-serif;
   margin: 0 18px 0 0;
   text-overflow: ellipsis;
   white-space: nowrap;
