--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,5 @@
 @import url('../vendor/normalize.css');
-@import url('../vendor/fonts/inter-font.css');
+@import url('../vendor/fonts/fonts.css');
 @import url('../blocks/root/root.css');
 @import url('../blocks/header/header.css');
 @import url('../blocks/logo/logo.css');
@@ -9,20 +9,19 @@
 @import url('../blocks/profile/__personal-data/profile__personal-data.css');
 @import url('../blocks/profile/__name-block/profile__name-block.css');
 @import url('../blocks/profile/__username/profile__username.css');
+@import url('../blocks/profile/__button/profile__button.css');
+@import url('../blocks/profile/__button/_type/profile__button_type_edit.css');
+@import url('../blocks/profile/__button/_type/profile__button_type_add.css');
 @import url('../blocks/profile/__job/profile__job.css');
 @import url('../blocks/popup/popup.css');
 @import url('../blocks/popup/_opened/popup_opened.css');
-@import url('../blocks/popup/__content/popup__content.css');
 @import url('../blocks/popup/__container/popup__container.css');
 @import url('../blocks/popup/__heading/popup__heading.css');
 @import url('../blocks/popup/__input/popup__input.css');
-@import url('../blocks/popup/__submit-button/popup__submit-button.css');
+@import url('../blocks/popup/__button/popup__button.css');
+@import url('../blocks/popup/__button/_type/popup__button_type_cancel.css');
+@import url('../blocks/popup/__button/_type/popup__button_type_submit.css');
 @import url('../blocks/button/button.css');
-@import url('../blocks/button/__plus-icon/button__plus-icon.css');
-@import url('../blocks/button/_type/button_type_add.css');
-@import url('../blocks/button/_type/button_type_edit.css');
-@import url('../blocks/button/_type/button_type_cancel.css');
-@import url('../blocks/button/_type/button_type_submit.css');
 @import url('../blocks/button/_type/button_type_like.css');
 @import url('../blocks/button/_condition/button_condition_active.css');
 @import url('../blocks/photo-grid/photo-grid.css');
@@ -30,5 +29,6 @@
 @import url('../blocks/photo-grid/__picture/photo-grid__picture.css');
 @import url('../blocks/photo-grid/__description-bar/photo-grid__description-bar.css');
 @import url('../blocks/photo-grid/__description/photo-grid__description.css');
+@import url('../blocks/photo-grid/__like-button/photo-grid__like-button.css');
 @import url('../blocks/footer/footer.css');
 @import url('../blocks/footer/__copyright/footer__copyright.css');
