--- a/blocks/profile/__button/_type/profile__button_type_add.css
+++ b/blocks/profile/__button/_type/profile__button_type_add.css
@@ -11,5 +11,6 @@
 @media screen and (max-width: 1279px) {
   .profile__button_type_add {
     padding: 23px 139.5px;
+    background-size: 16px;
   }
 }
