new:like-button functionality

--- a/pages/index.css
+++ b/pages/index.css
@@ -27,5 +27,6 @@
 @import url('../blocks/photo-grid/__description-bar/photo-grid__description-bar.css');
 @import url('../blocks/photo-grid/__description/photo-grid__description.css');
 @import url('../blocks/photo-grid/__like-button/photo-grid__like-button.css');
+@import url('../blocks/photo-grid/__like-button/_active/photo-grid__like-button_active.css');
 @import url('../blocks/footer/footer.css');
 @import url('../blocks/footer/__copyright/footer__copyright.css');
