--- a/blocks/photo-grid/__element/photo-grid__element.css
+++ b/blocks/photo-grid/__element/photo-grid__element.css
@@ -1,5 +1,6 @@
 .photo-grid__element {
   display: flex;
+  position: relative;
   flex-direction: column;
   border-radius: 10px;
   overflow: hidden;
