--- a/blocks/popup/__button/_type/popup__button_type_cancel.css
+++ b/blocks/popup/__button/_type/popup__button_type_cancel.css
@@ -1,8 +1,8 @@
 .popup__button_type_cancel {
-  padding: 16px;
   position: absolute;
-  top: calc(50vh - 165px - 40px);
-  left: calc(50% + 215px + 8px);
+  right: -40px;
+  top: -40px;
+  padding: 16px;
   border: none;
   background: none;
   background-image: url('../../../../images/cancel_button.svg');
@@ -12,7 +12,7 @@
 @media screen and (max-width: 1279px) {
   .popup__button_type_cancel {
     padding: 10px;
-    top: calc(50vh - 182px - 16px);
-    left: calc(50% + 121px);
+    top: -36px;
+    right: 0;
   }
 }
