--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,18 +1,6 @@
 .popup__container {
+  position: relative;
   display: flex;
-  box-sizing: border-box;
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
-  flex-direction: column;
-  width: 430px;
-  max-height: 330px;
-  background-color: white;
-  padding: 34px 36px 37px;
-  border-radius: 10px;
-}
-
-@media screen and (max-width: 1279px) {
-  .popup__container {
-    width: 282px;
-    padding: 25px 22px;
-  }
+  max-width: 75vw;
+  max-height: 75vh;
 }
