--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,9 +1,12 @@
 .popup {
   position: fixed;
-  display: none;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity linear 0.25s, visibility 0s 0.25s;
   width: 100%;
   height: 100vh;
   top: 0;
