--- a/pages/index.css
+++ b/pages/index.css
@@ -16,16 +16,23 @@
 @import url('../blocks/popup/popup.css');
 @import url('../blocks/popup/_opened/popup_opened.css');
 @import url('../blocks/popup/__container/popup__container.css');
+@import url('../blocks/popup/__content/popup__content.css');
 @import url('../blocks/popup/__heading/popup__heading.css');
 @import url('../blocks/popup/__input/popup__input.css');
 @import url('../blocks/popup/__button/popup__button.css');
 @import url('../blocks/popup/__button/_type/popup__button_type_cancel.css');
 @import url('../blocks/popup/__button/_type/popup__button_type_submit.css');
+@import url('../blocks/popup/__picture/popup__picture.css');
+@import url('../blocks/popup/__picture-caption/popup__picture-caption.css');
+@import url('../blocks/popup/_type/popup_type_add.css');
+@import url('../blocks/popup/_type/popup_type_edit.css');
+@import url('../blocks/popup/_type/popup_type_picture.css');
 @import url('../blocks/photo-grid/photo-grid.css');
 @import url('../blocks/photo-grid/__element/photo-grid__element.css');
 @import url('../blocks/photo-grid/__picture/photo-grid__picture.css');
 @import url('../blocks/photo-grid/__description-bar/photo-grid__description-bar.css');
 @import url('../blocks/photo-grid/__description/photo-grid__description.css');
+@import url('../blocks/photo-grid/__delete-button/photo-grid__delete-button.css');
 @import url('../blocks/photo-grid/__like-button/photo-grid__like-button.css');
 @import url('../blocks/photo-grid/__like-button/_active/photo-grid__like-button_active.css');
 @import url('../blocks/footer/footer.css');
