--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -4,7 +4,7 @@
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   flex-direction: column;
   width: 430px;
-  max-height: 330px;
+  min-height: 330px;
   background-color: white;
   padding: 34px 36px 37px;
   border-radius: 10px;
