--- a/src/blocks/profile/__icon-image/profile__icon-image.css
+++ b/src/blocks/profile/__icon-image/profile__icon-image.css
@@ -1,11 +1,13 @@
-.profile__image {
+.profile__icon-image {
   width: 120px;
+  min-height: 120px;
   border-radius: 50%;
   margin-right: 30px;
+  object-fit: cover;
 }
 
 @media screen and (max-width: 1279px) {
-  .profile__image {
+  .profile__icon-image {
     margin-right: 0;
     margin-bottom: 26px;
   }
